fix the scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,10 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
+/* For Chrome, Safari, and other WebKit browsers */
 html::-webkit-scrollbar {
-  display: none;
+  width: 8px; /* width of the entire scrollbar */
 }
 
-html {
-  scrollbar-width: none;
+html::-webkit-scrollbar-track {
+  background: transparent; /* color of the tracking area */
 }
+
+html::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.5); /* color of the scroll thumb */
+  border-radius: 20px; /* roundness of the scroll thumb */
+  border: 3px solid transparent; /* creates padding around scroll thumb */
+}
+
+/* For Firefox */
+html {
+  scrollbar-width: auto;
+  scrollbar-color: rgba(0, 0, 0, 0.5) transparent;
+}
+
